[metadata]
name = pydecluster
version = 0.0.1
author = Keurfon Luu
email = keurfonluu@outlook.com
description = Earthquake catalog declustering Python library
url = https://github.com/keurfonluu/pydecluster
project_urls =
    Code=https://github.com/keurfonluu/pydecluster
    Issues=https://github.com/keurfonluu/pydecluster/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    numba
python_requires = >= 3.6
setup_requires =
    setuptools >= 42
    wheel