[metadata]
name = bruces
version = 0.1.0
author = Keurfon Luu
email = keurfonluu@outlook.com
description = A bunch of really useful codes for earthquake stuff
url = https://github.com/keurfonluu/bruces
project_urls =
    Code=https://github.com/keurfonluu/bruces
    Issues=https://github.com/keurfonluu/bruces/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    numba
    disba
    matplotlib
python_requires = >= 3.6
setup_requires =
    setuptools >= 42
    wheel