[metadata]
name = bruces
version = file: bruces/VERSION
author = Keurfon Luu
email = keurfonluu@outlook.com
description = A bunch of really useful codes for earthquake stuff
url = https://github.com/keurfonluu/bruces
project_urls =
    Code=https://github.com/keurfonluu/bruces
    Issues=https://github.com/keurfonluu/bruces/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    scipy
    numba
    matplotlib
    utm
python_requires = >= 3.7
setup_requires =
    setuptools >= 42
    wheel

[options.extras_require]
full =
    disba

[options.package_data]
bruces =
    VERSION